# neko

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  docker-compose.yml  rustfmt.toml
.github/workflows/: build.yml
core/: Cargo.toml
core/src/: framework.rs  lib.rs  module.rs  state.rs
database/: Cargo.toml
database/sql/: 01_discord-create-tables.sql  02_steam-create-tables.sql
database/src/: discord.rs  lib.rs  steam.rs
locale/en-US/: drg.ftl  finder.ftl  steam.ftl
locale/pt-BR/: steam.ftl
locale/ru/: steam.ftl
modules/: Cargo.toml
modules/poise/: Cargo.toml
modules/poise/src/: lib.rs
modules/sqlx/: Cargo.toml
modules/sqlx/src/: lib.rs
modules/src/: discord.rs  lib.rs  poise.rs
modules/src/steam/: mod.rs
neko_bin/: Cargo.toml
neko_bin/src/: main.rs
neko_bin/src/app/: desktop.rs
neko_bin/src/app/ui/: mod.rs
neko_bin/src/frontend/: ui.rs  web.rs
plugins/discord/: Cargo.toml
plugins/discord/src/: event.rs  lib.rs
runtime/: Cargo.toml
runtime/src/: main.rs
shared/neko_env/: Cargo.toml
shared/neko_env/src/: lib.rs
shared/neko_static_app/: Cargo.toml
shared/neko_static_app/src/: main.rs
shared/neko_static_server/src/: main.rs
shared/neko_static_web/: Cargo.toml
sql/: 01_discord-create-tables.sql  02_steam-create-tables.sql  03_neko-create-tables.sql  04_gwaaa.sql  05_warnsys.sql  06_beetleadr.sql  07_starboard.sql  08_ftvroles.sql  09_poststreak.sql  09_poststrike.sql  10_finder.sql
src/: framework.rs  lib.rs  macros.rs  main.rs
src/core/: framework.rs  mod.rs  module.rs  state.rs
src/interface/: drg.rs  radio.rs  steam.rs
src/modules/: anilist.rs  atakku.rs  axum.rs  beatleader.rs  cron.rs  discord.rs  drg.rs  finder.rs  findr.rs  fluent.rs  ftv.rs  ftvroles.rs  gwaaa.rs  mod.rs  nftv.rs  poise.rs  postgres.rs  poststrike.rs  radio.rs  reqwest.rs  sqlx.rs  starboard.rs  steam.rs  streak.rs  svgui.rs  warnsys.rs  welcomer.rs
src/plugins/atakku/: module.rs  plugin.rs
src/plugins/beatleader/: plugin.rs
src/plugins/discord/: module.rs  plugin.rs  schema.rs
src/plugins/discord_cache/: module.rs  schema.rs
src/plugins/discord_roles/: module.rs  schema.rs
src/plugins/discord_welcomer/: module.rs  schema.rs
src/plugins/drg/: interface.rs  module.rs  plugin.rs  poise.rs  wrapper.rs
src/plugins/findr/: plugin.rs  query.rs  schema.rs
src/plugins/ftv/: module.rs  plugin.rs
src/plugins/ftvroles/: plugin.rs  schema.rs
src/plugins/gwaaa/: plugin.rs
src/plugins/mnts/: module.rs
src/plugins/neko/: autocomplete.rs  module.rs  plugin.rs  query.rs  schema.rs
src/plugins/radio/: interface.rs  plugin.rs
src/plugins/starboard/: plugin.rs  query.rs  schema.rs
src/plugins/steam/: commands.rs  interface.rs  module.rs  plugin.rs  poise.rs  query.rs  schema.rs  wrapper.rs
src/plugins/streak/: plugin.rs  query.rs  schema.rs
src/plugins/warnsys/: plugin.rs  query.rs  schema.rs
src/plugins/welcomer/: plugin.rs
src/query/: autocomplete.rs  finder.rs  findr.rs  ftvroles.rs  neko.rs  poststrike.rs  starboard.rs  steam.rs  streak.rs  warnsys.rs
src/schema/: discord.rs  finder.rs  ftvroles.rs  mod.rs  neko.rs  poststrike.rs  starboard.rs  steam.rs  streak.rs  warnsys.rs
templates/: login.html  settings.html
