# Copyright 2023 Atakku <https://atakku.dev>
#
# This project is dual licensed under MIT and Apache.

[package]
name = "neko"
version = "0.0.1"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
async-trait = "0.1"
futures = "0.3"
futures-locks = "0.7"
log = "0.4"
poise = { version = "0.5", git = "https://github.com/serenity-rs/poise", branch = "current" }
pretty_env_logger = "0.4"
sea-query = { version = "0", features = ["derive"] }
sea-query-binder = { version = "0", features = ["sqlx-postgres"] }
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
