# Copyright 2023 Atakku <https://atakku.dev>
#
# This project is dual licensed under MIT and Apache.

[package]
name = "neko"
version = "0.0.1"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
askama = "0.12"
axum = "0.6"
chrono = "0.4"
fluent = "0.16"
futures = "0.3"
intl-memoizer = "0.5"
log = "0.4"
poise = "0.5" 
pretty_env_logger = "0.5"
reqwest = "0.11"
resvg = "0.36"
rust-embed = { version = "8", features = ["compression"] }
sea-query = "0"
sea-query-binder = { version = "0", features = ["sqlx-postgres"] }
serde = "1"
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres"] }
teloxide = "0.12"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tokio-cron-scheduler = "0.9"
unicode-truncate = "0.2"
serde_urlencoded = "0.7"
url = "2"
axum_session = { version = "0.8", default-features = false, features = ["postgres-native"] }
regex = "1.9"
urlencoding = "2.1"
webp = "0.2"
image = "0.24"
