# Copyright 2024 Atakku <https://atakku.dev>
#
# This project is dual licensed under MIT and Apache.

[package]
name = "nekobot"
version = "0.0.1"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
askama = "0.12"
automod = "1"
axum = "0.6"
chrono = "0.4"
fluent = "0.16"
futures = "0.3"
intl-memoizer = "0.5"
log = "0.4"
poise = "0.5" 
pretty_env_logger = "0.5"
reqwest = { version = "0.11", features = [ "cookies"] }
resvg = "0.35"
rust-embed = { version = "8", features = ["compression"] }
sea-query = { version = "0", features = ["with-uuid"] }
sea-query-binder = { version = "0", features = ["sqlx-postgres", "with-uuid"] }
serde = "1"
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "uuid"] }
teloxide = "0.12"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tokio-cron-scheduler = "0.9"
unicode-truncate = "0.2"
serde_urlencoded = "0.7"
url = "2"
axum_session = { version = "0.6", default-features = false, features = ["postgres-rustls"] }
regex = "1.9"
uuid = { version = "1.0", features = ["serde", "v4"] }
urlencoding = "2.1.3"
itertools = "0.12.0"
geoutils = "0.5.1"
derivative = "2.2.0"
serde_json = "1.0.137"
