# Copyright 2023 Atakku <https://atakku.dev>
#
# This project is dual licensed under MIT and Apache.

[package]
name = "neko_core"
version = "0.0.0"
edition.workspace = true
license.workspace = true

[dependencies]
futures-locks.workspace = true
futures.workspace = true
log.workspace = true
tokio.workspace = true
