# Copyright 2023 Atakku <https://atakku.dev>
#
# This project is dual licensed under MIT and Apache.

[package]
name = "neko_db"
version = "0.0.0"
edition.workspace = true
license.workspace = true

[dependencies]
# local dependencies
neko_core.workspace = true
# external dependencies
sqlx.workspace = true
sea-query-binder.workspace = true
sea-query.workspace = true
tokio.workspace = true
