# Copyright 2023 Atakku <https://atakku.dev>
#
# This project is dual licensed under MIT and Apache.

[package]
name = "neko_mods"
version = "0.0.0"
edition.workspace = true
license.workspace = true

[dependencies]
# local dependencies
neko_core.workspace = true
neko_db.workspace = true
# external dependencies
futures.workspace = true
poise.workspace = true
tokio.workspace = true
sea-query.workspace = true
log.workspace = true
