# Copyright 2023 Atakku <https://atakku.dev>
#
# This project is dual licensed under MIT and Apache.

[package]
name = "neko_sqlx"
version = "0.0.0"
edition.workspace = true
license.workspace = true

[dependencies]
# local dependencies
neko_core.workspace = true
# external dependencies
sqlx.workspace = true
